--- a/Component Demo/Main.storyboard
+++ b/Component Demo/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Trending Repos-->
         <scene sceneID="gO8-av-Hme">
             <objects>
-                <viewController title="Trending" id="agY-Uv-0nX" userLabel="Trending Repos" customClass="TrendingReposCollectionViewController" sceneMemberID="viewController">
+                <viewController id="agY-Uv-0nX" userLabel="Trending Repos" customClass="TrendingReposCollectionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NJF-Za-gC0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -39,7 +39,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CMd-UJ-op8"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ckW-CM-U1j"/>
+                    <navigationItem key="navigationItem" title="Trending Today" id="ckW-CM-U1j"/>
                     <connections>
                         <outlet property="collectionView" destination="Z5l-hX-hwj" id="pQK-sf-DpE"/>
                     </connections>
@@ -51,7 +51,7 @@
         <!--Repos-->
         <scene sceneID="jb8-Nl-8kD">
             <objects>
-                <viewController title="Repos" id="tUd-73-qvZ" userLabel="Repos" customClass="RepositoriesCollectionViewController" sceneMemberID="viewController">
+                <viewController id="tUd-73-qvZ" userLabel="Repos" customClass="RepositoriesCollectionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Rl5-xx-bKS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -59,7 +59,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vr1-Qw-jYn">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6zC-W5-dqh">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="24" minimumInteritemSpacing="10" id="6zC-W5-dqh">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -77,7 +77,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="B98-5h-WVi"/>
                     </view>
-                    <navigationItem key="navigationItem" id="4Q8-7m-vl6"/>
+                    <navigationItem key="navigationItem" title="My Repos" id="4Q8-7m-vl6"/>
                     <connections>
                         <outlet property="collectionView" destination="vr1-Qw-jYn" id="YRj-bU-8al"/>
                     </connections>
@@ -104,11 +104,11 @@
             </objects>
             <point key="canvasLocation" x="-1243" y="-164"/>
         </scene>
-        <!--Item 1-->
+        <!--Repos-->
         <scene sceneID="dsQ-HR-zPy">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="huK-3x-qqn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="Sta-89-P0F"/>
+                    <tabBarItem key="tabBarItem" title="Repos" id="Sta-89-P0F"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zmr-Ix-xD6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -123,11 +123,11 @@
             </objects>
             <point key="canvasLocation" x="-326.08695652173918" y="-488.16964285714283"/>
         </scene>
-        <!--Item 2-->
+        <!--Trending-->
         <scene sceneID="Jny-UO-NVE">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rYJ-q1-DiG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="90r-98-ygO"/>
+                    <tabBarItem key="tabBarItem" title="Trending" id="90r-98-ygO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HA0-3S-tvv">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
